--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,7 +1,7 @@
 app:
   serviceName: "ports-processor"
   logLevel: "debug"
-  portsFilePath: "./data/ports.json"
+  portsFilePath: "./ports.json"
 db:
   name: ${DB_NAME}
   user: ${DB_USER}
